<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/ok"
        android:title="@string/ok"
        android:icon="@drawable/ic_ok_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/done"
        android:title="@string/done"
        android:icon="@drawable/ic_done_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/to_map"
        android:title="@string/to_map"
        android:icon="@drawable/ic_to_map_24dp"
        app:showAsAction="always" />
</menu>