<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="com.asistlab.tripnotes.ui.trip.Page" />

        <variable
            name="page"
            type="Page" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.trip.TripFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="240dp"
                    android:layout_height="240dp"
                    android:contentDescription="@string/trip_image"
                    android:src="@drawable/ic_default_trip_image_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="4dp"
                    android:text="@string/click_on_image_help"
                    android:visibility="@{page == Page.SHOW ? View.GONE : View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/trip_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="17sp"
                    android:visibility="@{page == Page.SHOW ? View.GONE : View.VISIBLE}" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    android:visibility="@{page == Page.SHOW ? View.VISIBLE : View.GONE}"
                    tools:text="fdgdfgd"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name"
                    android:inputType="text"
                    android:maxLength="100"
                    android:maxLines="2"
                    android:textSize="18sp"
                    android:visibility="@{page == Page.SHOW ? View.GONE : View.VISIBLE}"
                    tools:text="gdfggf"
                    tools:visibility="gone"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="4dp"
                    android:text="@string/trip_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="17sp"
                    android:visibility="@{page == Page.SHOW ? View.GONE : View.VISIBLE}" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:padding="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:visibility="@{page == Page.SHOW ? View.VISIBLE : View.GONE}"
                    tools:text="fdgdfgd"
                    tools:visibility="gone" />

                <EditText
                    android:id="@+id/description_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/enter_description"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:maxLength="500"
                    android:maxLines="5"
                    android:minLines="1"
                    android:textSize="18sp"
                    android:visibility="@{page == Page.SHOW ? View.GONE : View.VISIBLE}" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/start_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/starting_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:padding="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/start_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/start_label"
                    app:layout_constraintTop_toTopOf="@+id/start_label"
                    tools:text="11.11.2020" />

                <TextView
                    android:id="@+id/end_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="4dp"
                    android:text="@string/ending_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/start_label" />

                <TextView
                    android:id="@+id/end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/end_label"
                    app:layout_constraintEnd_toEndOf="@+id/start"
                    app:layout_constraintStart_toStartOf="@+id/start"
                    app:layout_constraintTop_toTopOf="@+id/end_label"
                    tools:text="17.11.2020" />

                <Button
                    android:id="@+id/choose_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/choose_trip_time"
                    android:visibility="@{page == Page.SHOW ? View.GONE : View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/end_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/points_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_s_locations"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="17sp"
                    android:padding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_divider"
                    app:layout_constraintTop_toBottomOf="@+id/points_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/points_recycler_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/points_label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_divider"
                    app:layout_constraintTop_toBottomOf="@+id/points_recycler_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <Button
                    android:id="@+id/remove_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/remove"
                    android:visibility="@{page == Page.SHOW ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/add_point"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/points_recycler_view" />

                <Button
                    android:id="@+id/add_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/add"
                    android:visibility="@{page == Page.SHOW ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/remove_point"
                    app:layout_constraintTop_toBottomOf="@+id/points_recycler_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{page == Page.EDIT ? View.VISIBLE : View.GONE}">

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_marginBottom="32dp"
                    android:backgroundTint="@color/red"
                    android:text="@string/delete_this_trip"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</layout>